force-app/main/default/objects/MB_Sales_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MB Sales Agreements</relationshipLabel>
    <relationshipName>MB_Sales_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>