force-app/main/default/objects/MB_Sales_Agreement__c/fields/Aftersales_Contact_Designation__c.field-meta.xml
<CustomField>
    <fullName>Aftersales_Contact_Designation__c</fullName>
    <label>Aftersales Contact Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>