force-app/main/default/objects/MB_Sales_Agreement__c/fields/Aftersales_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Aftersales_Contact_Full_Name__c</fullName>
    <label>Aftersales Contact Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>