force-app/main/default/objects/MB_Sales_Agreement__c/fields/Amount_to_Finance__c.field-meta.xml
<CustomField>
    <fullName>Amount_to_Finance__c</fullName>
    <label>Amount to Finance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>