force-app/main/default/objects/MB_Sales_Agreement__c/fields/ARCA_Number__c.field-meta.xml
<CustomField>
    <fullName>ARCA_Number__c</fullName>
    <label>ARCA Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>