force-app/main/default/objects/MB_Sales_Agreement__c/fields/ASFirst_Name__c.field-meta.xml
<CustomField>
    <fullName>ASFirst_Name__c</fullName>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>