force-app/main/default/objects/MB_Sales_Agreement__c/fields/Autoline_Magic__c.field-meta.xml
<CustomField>
    <fullName>Autoline_Magic__c</fullName>
    <label>Autoline Magic</label>
    <length>50</length>
    <type>Text</type>
</CustomField>