force-app/main/default/objects/MB_Sales_Agreement__c/fields/Balance_Due_to_Seller__c.field-meta.xml
<CustomField>
    <fullName>Balance_Due_to_Seller__c</fullName>
    <label>Balance Due to Seller</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>