force-app/main/default/objects/MB_Sales_Agreement__c/fields/Balance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Balance_Payment__c</fullName>
    <formula>Total_Vehicle_Price__c  - COE_Deposit__c - Vehicle_Deposit__c - Amount_to_Finance__c - Trade_In_Value__c +  HP_Loan_Outstanding_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>