force-app/main/default/objects/MB_Sales_Agreement__c/fields/Balance_Payment_Email__c.field-meta.xml
<CustomField>
    <fullName>Balance_Payment_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balance Payment Email</label>
    <type>Checkbox</type>
</CustomField>