force-app/main/default/objects/MB_Sales_Agreement__c/fields/Car_Collection_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Car_Collection_Date_Time__c</fullName>
    <label>Car Collection Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>