force-app/main/default/objects/MB_Sales_Agreement__c/fields/Change_Request_Form_Comment__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Form_Comment__c</fullName>
    <label>Change Request Form Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>