force-app/main/default/objects/MB_Sales_Agreement__c/fields/Change_Request_Form_Verified__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Form_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Request Form Verified</label>
    <type>Checkbox</type>
</CustomField>