force-app/main/default/objects/MB_Sales_Agreement__c/fields/CMobile__c.field-meta.xml
<CustomField>
    <fullName>CMobile__c</fullName>
    <inlineHelpText>Starts with 65</inlineHelpText>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>