force-app/main/default/objects/MB_Sales_Agreement__c/fields/CNRIC_Number__c.field-meta.xml
<CustomField>
    <fullName>CNRIC_Number__c</fullName>
    <label>NRIC Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>