force-app/main/default/objects/MB_Sales_Agreement__c/fields/COE_Charged_Capped_At__c.field-meta.xml
<CustomField>
    <fullName>COE_Charged_Capped_At__c</fullName>
    <label>COE Capped At</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>