force-app/main/default/objects/MB_Sales_Agreement__c/fields/COE_Deposit__c.field-meta.xml
<CustomField>
    <fullName>COE_Deposit__c</fullName>
    <defaultValue>10000</defaultValue>
    <label>COE Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>