force-app/main/default/objects/MB_Sales_Agreement__c/fields/Comm__c.field-meta.xml
<CustomField>
    <fullName>Comm__c</fullName>
    <formula>MB_Stock_Vehicle_Master__r.Comm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Comm</label>
    <type>Text</type>
</CustomField>