force-app/main/default/objects/MB_Sales_Agreement__c/fields/CSurname__c.field-meta.xml
<CustomField>
    <fullName>CSurname__c</fullName>
    <label>Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>