force-app/main/default/objects/MB_Sales_Agreement__c/fields/Daimler_LeadID__c.field-meta.xml
<CustomField>
    <fullName>Daimler_LeadID__c</fullName>
    <label>Daimler LeadID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>