force-app/main/default/objects/MB_Sales_Agreement__c/fields/Deposit_Collected_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Collected_Timestamp__c</fullName>
    <label>Deposit Collected Timestamp</label>
    <type>DateTime</type>
</CustomField>