force-app/main/default/objects/MB_Sales_Agreement__c/fields/Deposit_Received_For_Indent_Order__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Received_For_Indent_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit Received (For Indent Order)</label>
    <type>Checkbox</type>
</CustomField>