force-app/main/default/objects/MB_Sales_Agreement__c/fields/DocStatusRAPurchaseAgreement__c.field-meta.xml
<CustomField>
    <fullName>DocStatusRAPurchaseAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Doc Status</description>
    <label>RA Purchase Agreement</label>
    <type>Checkbox</type>
</CustomField>