force-app/main/default/objects/MB_Sales_Agreement__c/fields/DocStatusReleaseLetter__c.field-meta.xml
<CustomField>
    <fullName>DocStatusReleaseLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mandatory if Amount to Finance exists</inlineHelpText>
    <label>Release Letter Document</label>
    <type>Checkbox</type>
</CustomField>