force-app/main/default/objects/MB_Sales_Agreement__c/fields/Engine_Number__c.field-meta.xml
<CustomField>
    <fullName>Engine_Number__c</fullName>
    <formula>MB_Stock_Vehicle_Master__r.Engine__c</formula>
    <label>Engine Number</label>
    <type>Text</type>
</CustomField>