force-app/main/default/objects/MB_Sales_Agreement__c/fields/Estimated_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(MB_Stock_Vehicle_Master__r.Estimated_Delivery_Date__c, &quot;01&quot;, &quot;January&quot;), &quot;02&quot;, &quot;February&quot;), &quot;03&quot;, &quot;March&quot;), &quot;04&quot;, &quot;April&quot;), &quot;05&quot;, &quot;May&quot;), &quot;06&quot;, &quot;June&quot;) , &quot;07&quot;, &quot;July&quot;) , &quot;08&quot;, &quot;August&quot;) , &quot;09&quot;, &quot;September&quot;) , &quot;10&quot;, &quot;October&quot;)
, &quot;11&quot;, &quot;November&quot;) , &quot;12&quot;, &quot;December&quot;)</formula>
    <label>Estimated Delivery</label>
    <type>Text</type>
</CustomField>