force-app/main/default/objects/MB_Sales_Agreement__c/fields/Floor_UnitMA__c.field-meta.xml
<CustomField>
    <fullName>Floor_UnitMA__c</fullName>
    <label>Floor/Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>