force-app/main/default/objects/MB_Sales_Agreement__c/fields/GMS__c.field-meta.xml
<CustomField>
    <fullName>GMS__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Mandatory if Trade-in Exists</inlineHelpText>
    <label>GMS Verified</label>
    <type>Checkbox</type>
</CustomField>