force-app/main/default/objects/MB_Sales_Agreement__c/fields/GMS_PB__c.field-meta.xml
<CustomField>
    <fullName>GMS_PB__c</fullName>
    <formula>IF(ISBLANK(Trade_In_Value__c), TRUE,  if(Trade_In_Value__c=0, TRUE, if(GMS__c = TRUE,TRUE,FALSE)))</formula>
    <label>GMS PB Controller</label>
    <type>Checkbox</type>
</CustomField>