force-app/main/default/objects/MB_Sales_Agreement__c/fields/GMS_Value__c.field-meta.xml
<CustomField>
    <fullName>GMS_Value__c</fullName>
    <label>GMS Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>