force-app/main/default/objects/MB_Sales_Agreement__c/fields/HP_Loan_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>HP_Loan_Outstanding_Amount__c</fullName>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>