force-app/main/default/objects/MB_Sales_Agreement__c/fields/Intended_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Intended_Registration_Date__c</fullName>
    <label>Intended Registration Date</label>
    <type>Date</type>
</CustomField>