force-app/main/default/objects/MB_Sales_Agreement__c/fields/Latest_Docusign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Latest_Docusign_Envelope__c</fullName>
    <description>Store the latest Docusign envelope ID</description>
    <inlineHelpText>Store the latest Docusign envelope ID</inlineHelpText>
    <label>Latest Docusign Envelope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>