force-app/main/default/objects/MB_Sales_Agreement__c/fields/Latest_SA_UCA_Docusign_Envelope__c.field-meta.xml
<CustomField>
    <fullName>Latest_SA_UCA_Docusign_Envelope__c</fullName>
    <label>Latest SA UCA Docusign Envelope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>