force-app/main/default/objects/MB_Sales_Agreement__c/fields/Loan_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approval_Status__c</fullName>
    <label>Loan Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>