force-app/main/default/objects/MB_Sales_Agreement__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <defaultValue>&quot;TBA&quot;</defaultValue>
    <label>Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>No Loan</fullName>
            </value>
            <value>
                <fullName>With Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>