force-app/main/default/objects/MB_Sales_Agreement__c/fields/MB_Stock_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>MB_Stock_Vehicle_Master__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>MB Stock Vehicle Master</label>
    <referenceTo>MB_Stock_Vehicle_Master__c</referenceTo>
    <relationshipLabel>MB Sales Agreements</relationshipLabel>
    <relationshipName>MB_Sales_Agreements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>