force-app/main/default/objects/MB_Sales_Agreement__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <formula>MB_Stock_Vehicle_Master__r.Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model</label>
    <type>Text</type>
</CustomField>