force-app/main/default/objects/MB_Sales_Agreement__c/fields/Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Date__c</fullName>
    <label>Modified Date</label>
    <type>Date</type>
</CustomField>