force-app/main/default/objects/MB_Sales_Agreement__c/fields/Monthly_Instalment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Instalment__c</fullName>
    <formula>CEILING(((((Amount_to_Finance__c * Rate_p_a__c * (Value(TEXT(Terms__c))/12)))+ Amount_to_Finance__c)/Value(TEXT(Terms__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Instalment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>