force-app/main/default/objects/MB_Sales_Agreement__c/fields/My_Team_s_Project__c.field-meta.xml
<CustomField>
    <fullName>My_Team_s_Project__c</fullName>
    <formula>CONTAINS(Owner:User.UserRole.RollupDescription,$UserRole.RollupDescription)&amp;&amp;((Owner:User.UserRole.RollupDescription!=$UserRole.RollupDescription&amp;&amp;OwnerId!=$User.Id)||(OwnerId == $User.Id))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Team&apos;s Project</label>
    <type>Checkbox</type>
</CustomField>