force-app/main/default/objects/MB_Sales_Agreement__c/fields/Nature_of_Business_Trade__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business_Trade__c</fullName>
    <label>Nature of Business/Trade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>