force-app/main/default/objects/MB_Sales_Agreement__c/fields/Newly_Added_SA_Spec__c.field-meta.xml
<CustomField>
    <fullName>Newly_Added_SA_Spec__c</fullName>
    <description>This field contains all newly added MB SA Spec</description>
    <label>Newly Added SA Spec</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>