force-app/main/default/objects/MB_Sales_Agreement__c/fields/Partial_Payment_for_New_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Partial_Payment_for_New_Vehicle__c</fullName>
    <label>Partial Payment for New Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>