force-app/main/default/objects/MB_Sales_Agreement__c/fields/Postal_CodeMA__c.field-meta.xml
<CustomField>
    <fullName>Postal_CodeMA__c</fullName>
    <label>Postal Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>