force-app/main/default/objects/MB_Sales_Agreement__c/fields/Premium_Payable__c.field-meta.xml
<CustomField>
    <fullName>Premium_Payable__c</fullName>
    <label>Premium Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>