force-app/main/default/objects/MB_Sales_Agreement__c/fields/Previous_Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stock_Number__c</fullName>
    <label>Previous Stock Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>