force-app/main/default/objects/MB_Sales_Agreement__c/fields/Promo_Discount__c.field-meta.xml
<CustomField>
    <fullName>Promo_Discount__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>