force-app/main/default/objects/MB_Sales_Agreement__c/fields/Release_Letter_PB__c.field-meta.xml
<CustomField>
    <fullName>Release_Letter_PB__c</fullName>
    <formula>If(ISBLANK(Amount_to_Finance__c), TRUE, if(Amount_to_Finance__c=0, TRUE,if(DocStatusReleaseLetter__c = TRUE &amp;&amp;Release_Letter_Checked__c = TRUE,TRUE,FALSE )))</formula>
    <inlineHelpText>If Amount to Finance is blank, Release Letter will be auto-ticked</inlineHelpText>
    <label>Release Letter (If Applicable)</label>
    <type>Checkbox</type>
</CustomField>