force-app/main/default/objects/MB_Sales_Agreement__c/fields/Removed_SA_Spec__c.field-meta.xml
<CustomField>
    <fullName>Removed_SA_Spec__c</fullName>
    <description>This field contains all removed MB SA Specs</description>
    <label>Removed SA Spec</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>