force-app/main/default/objects/MB_Sales_Agreement__c/fields/Road_Tax_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Road_Tax_Expiry__c</fullName>
    <label>Road Tax Expiry</label>
    <type>Date</type>
</CustomField>