force-app/main/default/objects/MB_Sales_Agreement__c/fields/Sales_same_as_Customer__c.field-meta.xml
<CustomField>
    <fullName>Sales_same_as_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as User Contact</label>
    <type>Checkbox</type>
</CustomField>