force-app/main/default/objects/MB_Sales_Agreement__c/fields/Seller_Designation__c.field-meta.xml
<CustomField>
    <fullName>Seller_Designation__c</fullName>
    <label>Seller Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>