force-app/main/default/objects/MB_Sales_Agreement__c/fields/Seller_Email__c.field-meta.xml
<CustomField>
    <fullName>Seller_Email__c</fullName>
    <label>*Seller Email</label>
    <type>Email</type>
</CustomField>