force-app/main/default/objects/MB_Sales_Agreement__c/fields/Seller_is_Not_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Seller_is_Not_Buyer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Seller = Buyer, refer to Customer/User Contact Details</inlineHelpText>
    <label>Seller is Not Buyer</label>
    <type>Checkbox</type>
</CustomField>