force-app/main/default/objects/MB_Sales_Agreement__c/fields/Seller_NRIC__c.field-meta.xml
<CustomField>
    <fullName>Seller_NRIC__c</fullName>
    <label>*Seller NRIC</label>
    <length>16</length>
    <type>Text</type>
</CustomField>