force-app/main/default/objects/MB_Sales_Agreement__c/fields/SEmail_Address__c.field-meta.xml
<CustomField>
    <fullName>SEmail_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>