force-app/main/default/objects/MB_Sales_Agreement__c/fields/SSalutation__c.field-meta.xml
<CustomField>
    <fullName>SSalutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>