force-app/main/default/objects/MB_Sales_Agreement__c/fields/SSecondary_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>SSecondary_Contact_Number__c</fullName>
    <label>Secondary Contact Number</label>
    <type>Phone</type>
</CustomField>