force-app/main/default/objects/MB_Sales_Agreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Waiting for Confirmation</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Allocated</fullName>
            </value>
            <value>
                <fullName>Balance Payment</fullName>
            </value>
            <value>
                <fullName>Pending Registration</fullName>
            </value>
            <value>
                <fullName>Ready for Delivery</fullName>
            </value>
            <value>
                <fullName>Car Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>