force-app/main/default/objects/MB_Sales_Agreement__c/fields/Status_Autoline__c.field-meta.xml
<CustomField>
    <fullName>Status_Autoline__c</fullName>
    <label>Status (Autoline)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q</fullName>
                <label>Quotation</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Confirmed</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Invoiced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>