force-app/main/default/objects/MB_Sales_Agreement__c/fields/STKNUM__c.field-meta.xml
<CustomField>
    <fullName>STKNUM__c</fullName>
    <label>Stock Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>