force-app/main/default/objects/MB_Sales_Agreement__c/fields/Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>Stock_Number__c</fullName>
    <formula>MB_Stock_Vehicle_Master__r.Vehicle_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock Number</label>
    <type>Text</type>
</CustomField>