force-app/main/default/objects/MB_Sales_Agreement__c/fields/Stock_Progress__c.field-meta.xml
<CustomField>
    <fullName>Stock_Progress__c</fullName>
    <formula>Text(MB_Stock_Vehicle_Master__r.Progress__c)</formula>
    <label>Stock Progress</label>
    <type>Text</type>
</CustomField>