force-app/main/default/objects/MB_Sales_Agreement__c/fields/Street_NameMA__c.field-meta.xml
<CustomField>
    <fullName>Street_NameMA__c</fullName>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>