force-app/main/default/objects/MB_Sales_Agreement__c/fields/Submit_COE_Bidding__c.field-meta.xml
<CustomField>
    <fullName>Submit_COE_Bidding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit COE Bidding</label>
    <type>Checkbox</type>
</CustomField>