force-app/main/default/objects/MB_Sales_Agreement__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <inlineHelpText>Months</inlineHelpText>
    <label>Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>96</fullName>
            </value>
            <value>
                <fullName>118</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>