force-app/main/default/objects/MB_Sales_Agreement__c/fields/Total_Vehicle_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicle_Price__c</fullName>
    <formula>Vehicle_Package_Price__c + Total_Optional_Equipment__c - Promo_Discount__c +  MB_Stock_Vehicle_Master__r.VES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Vehicle Price without insurance</inlineHelpText>
    <label>Total Vehicle Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>