force-app/main/default/objects/MB_Sales_Agreement__c/fields/Traffic_Merit_Card__c.field-meta.xml
<CustomField>
    <fullName>Traffic_Merit_Card__c</fullName>
    <label>Traffic Merit Card</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>