force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_COE_Premium__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_COE_Premium__c</fullName>
    <label>Used Car COE Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>