force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Floor_Unit__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Floor_Unit__c</fullName>
    <label>Floor/Unit (Seller)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>