force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Make__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Make__c</fullName>
    <label>*Used Car Make</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALFA ROMEO</fullName>
            </value>
            <value>
                <fullName>Alpine</fullName>
            </value>
            <value>
                <fullName>Aston Martin</fullName>
            </value>
            <value>
                <fullName>Audi</fullName>
            </value>
            <value>
                <fullName>Bentley</fullName>
            </value>
            <value>
                <fullName>BMW</fullName>
            </value>
            <value>
                <fullName>BYD</fullName>
            </value>
            <value>
                <fullName>CHERVOLET</fullName>
            </value>
            <value>
                <fullName>CHERY</fullName>
            </value>
            <value>
                <fullName>CHRYSLER</fullName>
            </value>
            <value>
                <fullName>CITROEN</fullName>
            </value>
            <value>
                <fullName>DAEWOO</fullName>
            </value>
            <value>
                <fullName>DAIHATSU</fullName>
            </value>
            <value>
                <fullName>DODGE</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>Ferrari</fullName>
            </value>
            <value>
                <fullName>FIAT</fullName>
            </value>
            <value>
                <fullName>FORD</fullName>
            </value>
            <value>
                <fullName>GEELY</fullName>
            </value>
            <value>
                <fullName>HAFEI</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>HYUNDAI</fullName>
            </value>
            <value>
                <fullName>Infiniti</fullName>
            </value>
            <value>
                <fullName>ISUZU</fullName>
            </value>
            <value>
                <fullName>JAGUAR</fullName>
            </value>
            <value>
                <fullName>JEEP</fullName>
            </value>
            <value>
                <fullName>Kia</fullName>
            </value>
            <value>
                <fullName>Lamborghini</fullName>
            </value>
            <value>
                <fullName>LAND ROVER</fullName>
            </value>
            <value>
                <fullName>LEXUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>