force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Mileage__c</fullName>
    <inlineHelpText>km</inlineHelpText>
    <label>Mileage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>