force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Model__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Model__c</fullName>
    <label>*Used Car Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>