force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Number_of_Owners__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Number_of_Owners__c</fullName>
    <label>Number of Owners</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>