force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Postal_Code__c</fullName>
    <label>Postal Code (Seller)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>