force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Registered_Name__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Registered_Name__c</fullName>
    <label>*Registered Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>