force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Registration_Date__c</fullName>
    <label>*Registration Date</label>
    <type>Date</type>
</CustomField>