force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Registration_Number__c</fullName>
    <label>*Used Car Registration Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>