force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Remarks__c</fullName>
    <inlineHelpText>Used-Car</inlineHelpText>
    <label>Remarks (Used Car)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>