force-app/main/default/objects/MB_Sales_Agreement__c/fields/Used_Car_Viewing_Date__c.field-meta.xml
<CustomField>
    <fullName>Used_Car_Viewing_Date__c</fullName>
    <label>Car Viewing Date</label>
    <type>Date</type>
</CustomField>