force-app/main/default/objects/MB_Sales_Agreement__c/fields/VariantId__c.field-meta.xml
<CustomField>
    <fullName>VariantId__c</fullName>
    <formula>CASESAFEID(MB_Stock_Vehicle_Master__r.Variant__r.Id)</formula>
    <label>VariantId</label>
    <type>Text</type>
</CustomField>