force-app/main/default/objects/MB_Sales_Agreement__c/fields/Vehicle_Movement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Movement_Completed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defaulted as checked as MB does not utilise Vehicle movement at this point of time</description>
    <label>Vehicle Movement Completed</label>
    <type>Checkbox</type>
</CustomField>