force-app/main/default/objects/MB_Sales_Agreement__c/fields/VES_Rebate_Surchage__c.field-meta.xml
<CustomField>
    <fullName>VES_Rebate_Surchage__c</fullName>
    <label>VES Rebate/Surchage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>